re-formatted to google java style